agentcis-app-gitops-staging/gitops/argocd/initial-dependency/aws-eks-manifest/agrcod-server-gui-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    # Group multiple Ingress resources to use the same ALB
    alb.ingress.kubernetes.io/load-balancer-name: "argocd-server-gui"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    #alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    # ArgoCD specific settings
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-port: '8080'
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTPS
    alb.ingress.kubernetes.io/success-codes: 200,302,307
    # SSL certificate ARN (optional - add your ACM certificate ARN)
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-west-2:834033184010:certificate/14377159-6bfd-47ec-9b17-8421631d7c3d"
    #
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 443
